--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -372,6 +372,94 @@
     "        c *= i\n",
     "    return a / (b * c )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열 돌리기\n",
+    "\n",
+    "내가 하고 싶었던 코드  \n",
+    "```python\n",
+    "print('\\n'.join(input()))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str = input()\n",
+    "[print(i) for i in str]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열 겹쳐쓰기\n",
+    "\n",
+    "replace 함수를 사용해서 통과하고 싶은데 테스트케이스6에서 막힘..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bbbbbb'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(my_string, overwrite_string, s):\n",
+    "    return my_string.replace(my_string[s:s+len(overwrite_string)],overwrite_string)\n",
+    "\n",
+    "solution( \"aaaaaa\", \"bbb\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, overwrite_string, s):\n",
+    "    return my_string[:s] + overwrite_string + my_string[s+len(overwrite_string)::]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 더 크게 합치기\n",
+    "\n",
+    "```python\n",
+    "int(max(f\"{a}{b}\", f\"{b}{a}\"))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(a, b):\n",
+    "    if int(str(a) + str(b)) > int(str(b) + str(a)):\n",
+    "        return int(str(a) + str(b))\n",
+    "    else:\n",
+    "        return int(str(b) + str(a))"
+   ]
   }
  ],
  "metadata": {
