--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -460,6 +460,121 @@
     "    else:\n",
     "        return int(str(b) + str(a))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 조건 문자열\n",
+    "\n",
+    "ineq와 eq를 문자열 그대로 사용하고 싶었다.  \n",
+    "eval(): 문자열로 된 표현식을 실행한다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(ineq, eq, n, m):\n",
+    "    if eq == '!':\n",
+    "        eq = ''\n",
+    "    return 1 if eval(str(n) + ineq+eq + str(m)) else 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### flag에 따라 다른 값 반환하기\n",
+    "\n",
+    "```python\n",
+    "a + b if flag else a - b\n",
+    "```\n",
+    "flag 값이 원래 boolean 값이기 때문에.. 그냥 사용하면 되는거였다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(a, b, flag):\n",
+    "    return a + b if flag == bool('true') else a - b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 코드 처리하기\n",
+    "\n",
+    "이거 코드 이해 안됨...\n",
+    "```python \n",
+    "def solution(code):\n",
+    "    return \"\".join(code.split(\"1\"))[::2] or \"EMPTY\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(code):\n",
+    "    mode = 0\n",
+    "    ret = ''\n",
+    "    for i in range(len(code)):\n",
+    "        if mode == 0:\n",
+    "            if (code[i] != '1') & (i % 2 == 0):\n",
+    "                ret += code[i]\n",
+    "            elif code[i] == '1':\n",
+    "                mode = 1\n",
+    "        else:\n",
+    "            if (code[i] != '1') & (i % 2 != 0):\n",
+    "                ret += code[i]\n",
+    "            elif code[i] == '1':\n",
+    "                mode = 0\n",
+    "    return ret if ret != '' else 'EMPTY'\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 주사위게임2\n",
+    "\n",
+    "set으로 동일값 추출하여 문제 풀기\n",
+    "```python\n",
+    "def solution(a, b, c):\n",
+    "    check=len(set([a,b,c]))\n",
+    "    if check==1:\n",
+    "        return 3*a*3*(a**2)*3*(a**3)\n",
+    "    elif check==2:\n",
+    "        return (a+b+c)*(a**2+b**2+c**2)\n",
+    "    else:\n",
+    "        return (a+b+c)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(a, b, c):\n",
+    "    if (a != b) & (a != c) & (b != c):\n",
+    "        return a + b + c\n",
+    "    elif a == b == c:\n",
+    "        return (a+b+c) * (a**2 + b**2 + c**2) * (a**3 + b**3 + c**3)\n",
+    "    elif (a != (b == c)) | ((a == b) != c) | ((a == c) != b):\n",
+    "        return (a+b+c) * (a**2 + b**2 + c**2)"
+   ]
   }
  ],
  "metadata": {
