--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -575,6 +575,113 @@
     "    elif (a != (b == c)) | ((a == b) != c) | ((a == c) != b):\n",
     "        return (a+b+c) * (a**2 + b**2 + c**2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2차원으로 만들기\n",
+    "\n",
+    "이중리스트를 선언할 때 '*' 로 선언을 하게 되면 '얕은 복사'가 된다.  \n",
+    "0번째 리스트의 0번째 인덱스(arr[0][0])의 값을 0에서 1로 변경하게 되면, 뒤의 복사된 다른 배열들의 0번째 값도 같이 변경된다.  \n",
+    "[[0,0],[0,0]] => [[1,0],[1,0]]  \n",
+    "따라서 해당 방법은 지양하는 것이 좋다.  \n",
+    "\n",
+    "간결화 코드\n",
+    "```python\n",
+    "def list_chunk(lst, n):\n",
+    "  return [lst[i:i+n] for i in range(0, len(lst), n)]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [3, 4], [5, 6], [7, 8]]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(num_list, n):\n",
+    "    result = [[] for j in range(len(num_list) // n)] \n",
+    "    for i in range(len(num_list)):\n",
+    "        result[i // n].append(num_list[i])\n",
+    "        \n",
+    "    return result\n",
+    "\n",
+    "solution([1,2,3,4,5,6,7,8],2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 공던지기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers, k):\n",
+    "    return numbers[2*(k-1) % len(numbers)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열 회전시키기\n",
+    "\n",
+    "간단하게 한줄로\n",
+    "```python\n",
+    "def solution(numbers, direction):\n",
+    "    return [numbers[-1]] + numbers[:-1] if direction == 'right' else numbers[1:] + [numbers[0]]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers, direction):\n",
+    "    if direction == 'right':\n",
+    "        result = numbers[0:len(numbers)-1]\n",
+    "        result.insert(0,numbers[len(numbers)-1])\n",
+    "    else:\n",
+    "        result = numbers[1:len(numbers)]\n",
+    "        result.append(numbers[0])\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 위의 코드를 조금 더 간결하게\n",
+    "# numbers[0]을 그냥 +로 붙이는건 불가능, int + list 이기 때문에, 따라서 int값을 list로 감싸기\n",
+    "def solution(numbers, direction):\n",
+    "    if direction == 'right':\n",
+    "        result = [numbers[len(numbers)-1]] + numbers[0:len(numbers)-1]\n",
+    "    else:\n",
+    "        result = numbers[1:len(numbers)] + [numbers[0]]\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
