--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -682,6 +682,97 @@
     "        result = numbers[1:len(numbers)] + [numbers[0]]\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 합성수 찾기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    result = 0\n",
+    "    # 1,2,3은 약수의 개수가 3 이상이 나올 수 없으므로 4부터 찾기 시작\n",
+    "    for i in range(4,n+1):\n",
+    "        # 약수는 1을 무조건 포함하므로 0이 아닌 1부터 시작\n",
+    "        divisor = 1\n",
+    "        # 약수 구하기, 1은 무조건 포함하기에 2부터 찾기 시작\n",
+    "        for j in range(2,i+1):\n",
+    "            # 나머지가 0이라면 약수\n",
+    "            if i % j == 0:\n",
+    "                divisor += 1\n",
+    "            # 약수의 개수가 3이라면 문제상 이 이상은 더 볼 필요가 없으므로 result에 값을 추가하고 반복문 빠져나옴\n",
+    "            if divisor == 3:\n",
+    "                result += 1\n",
+    "                break\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 최댓값 만들기\n",
+    "\n",
+    "정렬을 사용하면 더 쉽다..\n",
+    "\n",
+    "```python\n",
+    "def solution(numbers):\n",
+    "    numbers.sort()\n",
+    "    return numbers[-2] * numbers[-1]\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers):\n",
+    "    a = max(numbers)\n",
+    "    numbers.remove(a)\n",
+    "    return a * max(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 팩토리얼"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def solution(n):\n",
+    "    i = 1\n",
+    "    result = []\n",
+    "\n",
+    "    while True:\n",
+    "        # i 팩토리얼의 값이 n보다 작거나 같으면 result에 i 추가\n",
+    "        if math.factorial(i) <= n:\n",
+    "            result.append(i)\n",
+    "        else:\n",
+    "            # 팩토리얼 값이 n보다 크면 반복문 종료\n",
+    "            break\n",
+    "        # i 값 증가시키기\n",
+    "        i += 1\n",
+    "            \n",
+    "    return max(result)"
+   ]
   }
  ],
  "metadata": {
