기초 Day6, 마지막 두 원소

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -773,6 +773,27 @@
     "            \n",
     "    return max(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 마지막 두 원소"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list):\n",
+    "    if num_list[-1] > num_list[-2]:\n",
+    "        num_list.append(num_list[-1] - num_list[-2])\n",
+    "    else:\n",
+    "        num_list.append(num_list[-1] * 2)\n",
+    "    return num_list"
+   ]
   }
  ],
  "metadata": {
