--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -794,6 +794,125 @@
     "        num_list.append(num_list[-1] * 2)\n",
     "    return num_list"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 수 조작하기\n",
+    "\n",
+    "딕셔너리를 사용하면 더 간결하고 좋을 듯\n",
+    "```python \n",
+    "def solution(n, control):\n",
+    "    answer = n\n",
+    "    c = { 'w':1, 's':-1, 'd':10, 'a':-10}\n",
+    "    for i in control:\n",
+    "        answer += c[i]\n",
+    "    return answer\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, control):\n",
+    "    for i in control:\n",
+    "        if i == 'w':\n",
+    "            n += 1\n",
+    "        elif i == 's':\n",
+    "            n -= 1\n",
+    "        elif i == 'd':\n",
+    "            n += 10\n",
+    "        else:\n",
+    "            n -= 10\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 수 조작하기2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numLog):\n",
+    "    result = ''\n",
+    "    dic = { 1:'w', -1:'s', 10:'d', -10:'a'}\n",
+    "    for i in range(1, len(numLog)):\n",
+    "      result += dic[numLog[i] - numLog[i-1]]\n",
+    "    return result\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 수열과 구간쿼리3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, queries):\n",
+    "    for i in queries:\n",
+    "        a = arr[i[0]]\n",
+    "        arr[i[0]] = arr[i[1]]\n",
+    "        arr[i[1]] = a\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 더 간단하게 풀이 (다른 사람 코드 참고)\n",
+    "def solution(arr, queries):\n",
+    "    for a,b in queries:\n",
+    "        arr[a],arr[b]=arr[b],arr[a]\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 수열과 구간쿼리2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, queries):\n",
+    "    result = []\n",
+    "    for s,e,k in queries:\n",
+    "        newArr = arr[s:e+1]\n",
+    "        for i in sorted(newArr):\n",
+    "            if k < i:\n",
+    "                result.append(i)\n",
+    "                break\n",
+    "            if i == max(sorted(newArr)):\n",
+    "                result.append(-1)\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
