행렬의 덧셈

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -913,6 +913,29 @@
     "                result.append(-1)\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lev1\n",
+    "#### 행렬의 덧셈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr1, arr2):\n",
+    "    answer = []\n",
+    "    for i in range(len(arr1)):\n",
+    "        answer.append([])\n",
+    "        for j in range(len(arr1[i])):\n",
+    "            answer[i].append(arr1[i][j] + arr2[i][j])\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
