직사각형 별찍기

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -936,6 +936,24 @@
     "            answer[i].append(arr1[i][j] + arr2[i][j])\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 직사각형 별찍기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = map(int, input().strip().split(' '))\n",
+    "star = '*'*a+'\\n'\n",
+    "print(star*b)"
+   ]
   }
  ],
  "metadata": {
