최대공약수와 최소공배수

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -954,6 +954,77 @@
     "star = '*'*a+'\\n'\n",
     "print(star*b)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 최대공약수와 최소공배수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 12]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 프로그래머스의 python 버전은 3.8.5 / lcm 업데이트는 3.9.0이라 해당 코드는 프로그래머스에서 작동하지 않음\n",
+    "import math\n",
+    "def solution(n, m):\n",
+    "    return [math.gcd(n,m), math.lcm(n,m)]\n",
+    "\n",
+    "solution(3,12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 최대공약수와 최소공배수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, m):\n",
+    "    result = []\n",
+    "    \n",
+    "    # 최대공약수\n",
+    "    def gcd(a):\n",
+    "        gcd_list = []\n",
+    "        for i in range(1,a+1):\n",
+    "            if a % i == 0:\n",
+    "                gcd_list.append(i)\n",
+    "        return gcd_list\n",
+    "    \n",
+    "    # 공통 최대공약수 찾기\n",
+    "    temp = []\n",
+    "    for i in reversed(gcd(n)):\n",
+    "        for j in reversed(gcd(m)):\n",
+    "            if i == j:\n",
+    "                temp.append(i)\n",
+    "                break\n",
+    "    result.append(temp[0])\n",
+    "    \n",
+    "    # 최소공배수\n",
+    "    result.append(n*m / temp[0])\n",
+    "    \n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
