3진법 뒤집기

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1025,6 +1025,56 @@
     "    \n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3진법 뒤집기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    # 앞뒤 반전 3진법 저장하기\n",
+    "    arr = ''\n",
+    "    while True:\n",
+    "        if n // 3 == 0:\n",
+    "            arr += str(n % 3)\n",
+    "            break\n",
+    "        arr += str(n % 3)\n",
+    "        n = n // 3\n",
+    "            \n",
+    "    # 10진법으로 표현\n",
+    "    result = 0\n",
+    "    for i in range(1,len(arr)+1):\n",
+    "        result += int(arr[-i]) * (3 ** (i-1))\n",
+    "        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 참고할 다른 사람 코드 \n",
+    "# int(tmp,3)이 tmp 문자열을 3진수로 만들어준다.\n",
+    "def solution(n):\n",
+    "    tmp = ''\n",
+    "    while n:\n",
+    "        tmp += str(n % 3)\n",
+    "        n = n // 3\n",
+    "\n",
+    "    answer = int(tmp, 3)\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
