같은 숫자는 싫어

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1075,6 +1075,46 @@
     "    answer = int(tmp, 3)\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 같은 숫자는 싫어\n",
+    "\n",
+    "pop(): 맨 마지막 요소를 리턴하고 삭제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    answer = []\n",
+    "    for i in range(len(arr)-1):\n",
+    "        if arr[i] != arr[i+1]:\n",
+    "            answer.append(arr[i])\n",
+    "    answer.append(arr.pop())\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 처음에 풀고 싶었던 코드 방식 (해당 코드는 다른 사람 풀이)\n",
+    "def no_continuous(s):\n",
+    "    a = []\n",
+    "    for i in s:\n",
+    "        if a[-1:] == [i]: continue\n",
+    "        a.append(i)\n",
+    "    return a"
+   ]
   }
  ],
  "metadata": {
