Day12 문자열 정렬하기

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1115,6 +1115,36 @@
     "        a.append(i)\n",
     "    return a"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 입문 Day12\n",
+    "#### 문자열 정렬하기(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(my_string):\n",
+    "    result = []\n",
+    "    for i in my_string:\n",
+    "        if 48 <= ord(i) and ord(i) <= 57:\n",
+    "            result.append(int(i))\n",
+    "    return sorted(result)"
+   ]
   }
  ],
  "metadata": {
