숨어있는 숫자의 덧셈(1)

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1145,6 +1145,47 @@
     "            result.append(int(i))\n",
     "    return sorted(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 숨어있는 숫자의 덧셈(1)\n",
+    "\n",
+    "str.isdigit()  \n",
+    "문자열이 '숫자'로만 이루어져있는지 확인하는 함수  \n",
+    "문자가 '단 하나'라도 있다면 False를 반환하고, 모든 문자가 '숫자'로만 이루어져있으면 True를 반환\n",
+    "\n",
+    "사용법  \n",
+    "1, str.isdigit(\"판단하고자 하는 문자열\")  \n",
+    "2, \"판단하고자 하는 문자열\".isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string):\n",
+    "    result = 0\n",
+    "    for i in my_string:\n",
+    "        if 48 <= ord(i) and ord(i) <= 57:\n",
+    "            result += int(i)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 다른 사람 풀이\n",
+    "def solution(my_string):\n",
+    "    return sum(int(i) for i in my_string if i.isdigit())"
+   ]
   }
  ],
  "metadata": {
