--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1125,6 +1125,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 모음 제거\n",
+    "\n",
+    "`re.sub(pattern, new, string)`  \n",
+    "string에서 pattern에 해당하는 부분을 new로 대체하라는 의미"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def solution(my_string):\n",
+    "    my_string = re.sub(\"(a|e|i|o|u)\",'', my_string)\n",
+    "    return my_string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
