--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1120,8 +1120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 입문 Day12\n",
-    "#### 문자열 정렬하기(1)"
+    "### 입문 Day12"
    ]
   },
   {
@@ -1145,6 +1144,33 @@
     "def solution(my_string):\n",
     "    my_string = re.sub(\"(a|e|i|o|u)\",'', my_string)\n",
     "    return my_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 다른 사람 코드\n",
+    "def solution(my_string):\n",
+    "    return \"\".join([i for i in my_string if not(i in \"aeiou\")])\n",
+    "\n",
+    "# 처음 생각한 코드(다른 사람 코드 작성) \n",
+    "# 값이 입력 그대로 나와서 포기했는데, replace를 한 것을 저장을 안해서 안된거였음.. \n",
+    "def solution(my_string):\n",
+    "    vowels = ['a','e','i','o','u']\n",
+    "    for vowel in vowels:\n",
+    "        my_string = my_string.replace(vowel, '')\n",
+    "    return my_string\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열 정렬하기(1)"
    ]
   },
   {
@@ -1204,10 +1230,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# 다른 사람 풀이\n",
     "def solution(my_string):\n",
     "    return sum(int(i) for i in my_string if i.isdigit())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 소인수분해"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[44], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m             i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     12\u001b[0m     \u001b[39mreturn\u001b[39;00m arr\n\u001b[0;32m---> 14\u001b[0m solution(\u001b[39m17\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[44], line 3\u001b[0m, in \u001b[0;36msolution\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolution\u001b[39m(n):\n\u001b[1;32m      2\u001b[0m     arr \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mwhile\u001b[39;00m n \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m      4\u001b[0m         i \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      5\u001b[0m         \u001b[39mif\u001b[39;00m n \u001b[39m%\u001b[39m i \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def solution(n):\n",
+    "    arr = []\n",
+    "    i = 2\n",
+    "    while n != 1:\n",
+    "        if n % i == 0:\n",
+    "            n = n // i\n",
+    "            if i in arr:\n",
+    "                continue\n",
+    "            arr.append(i)\n",
+    "        else:\n",
+    "            i += 1\n",
+    "    return arr\n",
+    "\n",
+    "solution(17)"
    ]
   }
  ],
