코테 스터디 week5 파일 생성

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -1244,22 +1244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[44], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m             i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     12\u001b[0m     \u001b[39mreturn\u001b[39;00m arr\n\u001b[0;32m---> 14\u001b[0m solution(\u001b[39m17\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn[44], line 3\u001b[0m, in \u001b[0;36msolution\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolution\u001b[39m(n):\n\u001b[1;32m      2\u001b[0m     arr \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mwhile\u001b[39;00m n \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m      4\u001b[0m         i \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      5\u001b[0m         \u001b[39mif\u001b[39;00m n \u001b[39m%\u001b[39m i \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def solution(n):\n",
     "    arr = []\n",
@@ -1272,9 +1259,7 @@
     "            arr.append(i)\n",
     "        else:\n",
     "            i += 1\n",
-    "    return arr\n",
-    "\n",
-    "solution(17)"
+    "    return arr\n"
    ]
   }
  ],
