수열과 구간쿼리4

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -39,6 +39,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 수열과 구간쿼리 \n",
+    "\n",
+    "정수 m이 정수 d의 정수배가 될 때, m을 d의 '배수'라고 한다.  \n",
+    "여기서 말하는 정수가 음의 정수, 0, 양의 정수를 말하는 거는 알겁니다. 그러면 0은 모든 수의 배수라고 볼 수 있겠죠.\n",
+    "\n",
+    "다른 사람 코드\n",
+    "```python \n",
+    "def solution(arr, queries):\n",
+    "    for s, e, k in queries:\n",
+    "        for i in range(s, e+1):\n",
+    "            if i%k == 0:\n",
+    "                arr[i] += 1\n",
+    "    return arr\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, queries):\n",
+    "    for s,e,k in queries:\n",
+    "        for i in range(len(arr[s:e+1])):\n",
+    "            if i+s == 0:\n",
+    "                arr[i] += 1\n",
+    "            elif k == 1:\n",
+    "                arr[i] += 1\n",
+    "            elif i+s == 1:\n",
+    "                continue\n",
+    "            elif (i+s) % k == 0:\n",
+    "                arr[s+i] += 1\n",
+    "    return arr\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
