배열 만들기2

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -79,6 +79,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 배열 만들기2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(l, r):\n",
+    "    result = []\n",
+    "    trashes = ['1','2','3','4','6','7','8','9']\n",
+    "    # 범위 안에 있는 5의 배수들 모두 찾기\n",
+    "    for i in range(l,r+1):\n",
+    "        if i % 5 == 0:\n",
+    "            # '0'과 '5'로만 이루어진 정수 찾기\n",
+    "            k = 0\n",
+    "            while True:\n",
+    "                if str(i)[k] in trashes:\n",
+    "                    break\n",
+    "                elif k == len(str(i))-1:\n",
+    "                    result.append(i)\n",
+    "                    break\n",
+    "                k += 1\n",
+    "    # 만약 빈 배열이면 -1값 result에 추가\n",
+    "    if len(result) == 0:\n",
+    "        result.append(-1)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
