--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -79,7 +79,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 배열 만들기2"
+    "#### 배열 만들기2\n",
+    "\n",
+    "set을 이용해서 풀이하기(다른사람 풀이)\n",
+    "```python\n",
+    "def solution(l, r):\n",
+    "    answer = []\n",
+    "    for num in range(l, r + 1):\n",
+    "        if not set(str(num)) - set(['0', '5']):\n",
+    "            answer.append(num)\n",
+    "    return answer if answer else [-1]\n",
+    "```"
    ]
   },
   {
@@ -107,6 +117,23 @@
     "    if len(result) == 0:\n",
     "        result.append(-1)\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 카운트 업"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(start, end):\n",
+    "    return [i for i in range(start,end+1)]"
    ]
   },
   {
