콜라츠 수열 만들기"

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -140,6 +140,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 콜라츠 수열 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    result = [n]\n",
+    "    while n != 1:\n",
+    "        if n % 2 == 0:\n",
+    "            n = n // 2\n",
+    "            result.append(n)\n",
+    "        else:\n",
+    "            n = 3 * n + 1\n",
+    "            result.append(n)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
