--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -165,6 +165,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 배열 만들기4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    i = 0\n",
+    "    stk = []\n",
+    "    while i < len(arr):\n",
+    "        if len(stk) == 0:\n",
+    "            stk.append(arr[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            if stk[-1] < arr[i]:\n",
+    "                stk.append(arr[i])\n",
+    "                i += 1\n",
+    "            else:\n",
+    "                stk.pop()\n",
+    "    return stk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
