--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -194,6 +194,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Day8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 간단한 논리 연산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(x1, x2, x3, x4):\n",
+    "    return (x1 or x2) and (x3 or x4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 주사위 게임 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "def solution(a, b, c, d):\n",
+    "    # 각 값을 리스트로 저장\n",
+    "    li = [a,b,c,d]\n",
+    "    # li를 Counter 메소드를 사용하여 가장 많이 존재하는 값(most_common)순으로 저장\n",
+    "    co = Counter(li).most_common()\n",
+    "\n",
+    "    # 만약 set 함수를 통해 중복을 제거했을 때, 길이가 1이라면 (즉, a,b,c,d의 값이 모두 같다는 것)\n",
+    "    if len(set(li)) == 1:\n",
+    "        return 1111*a\n",
+    "    # 길이가 2가 나왔을 때,\n",
+    "    elif len(set(li)) == 2:\n",
+    "        # 가장 많이 나온 값의 횟수가 3이라면 (주사위는 3:1의 값 / 즉 3개는 값이 같고 1개는 값이 다름)\n",
+    "        if co[0][1] == 3:\n",
+    "            return (10 * co[0][0] + co[1][0]) ** 2\n",
+    "        # 가장 많이 나온 값의 횟수가 2라면 (주사위는 2:2의 값)\n",
+    "        elif co[0][1] == 2:\n",
+    "            return (co[0][0] + co[1][0]) * abs(co[0][0] - co[1][0])\n",
+    "    # 길이가 3이라면 (1:1:2 / 2개는 주사위 값이 같음)\n",
+    "    elif len(set(li)) == 3:\n",
+    "        return co[1][0] * co[2][0]\n",
+    "    # 길이가 4로, 주사위의 값이 모두 다르다면\n",
+    "    else:\n",
+    "        return min(li)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 글자 이어 붙여 문자열 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, index_list):\n",
+    "    result = ''\n",
+    "    for i in index_list:\n",
+    "        result += my_string[i]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 한줄 코드 (다른 사람)\n",
+    "def solution(my_string, index_list):\n",
+    "    return ''.join([my_string[idx] for idx in index_list])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9로 나눈 나머지"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(number):\n",
+    "    return sum(int(i) for i in number) % 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열 여러번 뒤집기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 몇개의 테스트케이스에서 에러가 발생 \n",
+    "def solution(my_string, queries):\n",
+    "    for s,e in queries:\n",
+    "        my_string = my_string.replace(my_string[s:e+1],my_string[s:e+1][::-1])\n",
+    "    return my_string\n",
+    "\n",
+    "# 반례\n",
+    "# 입력값 〉 \"abab\", [[2, 3]]\n",
+    "# 기댓값 〉 \"abba\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 새로 작성한 코드\n",
+    "# my_string을 리스트로 만들어서 풀이\n",
+    "def solution(my_string, queries):\n",
+    "    my_string = list(my_string)\n",
+    "    for s,e in queries:\n",
+    "        my_string[s:e+1] = my_string[s:e+1][::-1]\n",
+    "    return ''.join(my_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
