--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -25,6 +25,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 컨트롤 Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 처음 작성한 코드, del이나 pop을 사용하면 삭제되면서 리스트의 순서(i)도 변경되어 index Error 발생\n",
+    "def solution(s):\n",
+    "    s_list = s.split(' ')\n",
+    "    for i in range(len(s_list)):\n",
+    "        if s_list[i] == 'Z':\n",
+    "            # return s_list[i-1]\n",
+    "            del s_list[i]\n",
+    "            del s_list[i-1]\n",
+    "            if i == len(s_list):\n",
+    "                break\n",
+    "    return s_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    # s는 문자열이므로 공백을 기준으로 나눔 \n",
+    "    # s_list = ['1','2','Z','4']\n",
+    "    s_list = s.split(' ')\n",
+    "    for i in range(len(s_list)):\n",
+    "        # s_list의 길이 만큼 반복하여 Z찾기\n",
+    "        if s_list[i] == 'Z':\n",
+    "            # Z를 찾으면 해당 인덱스와 이전 인덱스의 값을 0(int)으로 변경\n",
+    "            s_list[i] = 0\n",
+    "            s_list[i-1] = 0\n",
+    "    # 반복문이 종료되면 다음과 같은 형태\n",
+    "    # s_list = ['1',0,0,'4']\n",
+    "    # 문자열과 숫자가 섞여있으므로 해당 리스트의 값을 모두 int로 변경시킴\n",
+    "    s_list = list(map(int,s_list))\n",
+    "    # sum 함수를 통해 리스트의 값을 모두 더함\n",
+    "    return sum(s_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
@@ -377,8 +427,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
