배열의 원소길이

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -75,6 +75,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 배열의 원소길이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(strlist):\n",
+    "    answer = [len(i) for i in strlist]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
