--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -93,6 +93,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 중복된 문자 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string):\n",
+    "    answer = ''\n",
+    "    for i in my_string:\n",
+    "        if i not in answer:\n",
+    "            answer += i\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
