--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -114,6 +114,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 삼각형의 완성조건(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(sides):\n",
+    "    if sum(sides) - max(sides) > max(sides):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 조금더 간단하게 한줄코드 (다른사람 풀이)\n",
+    "return 1 if max(sides) < (sum(sides) - max(sides)) else 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
