--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -144,6 +144,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Day14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 가까운 수\n",
+    "\n",
+    "반례 1)  \n",
+    "입력값 〉 [2, 3, 4], 1  \n",
+    "기댓값 〉 2\n",
+    "\n",
+    "반례 2)  \n",
+    "입력값 〉 [2, 4, 1, 1], 3  \n",
+    "기댓값 〉 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# answer를 0으로 지정하니까 테스트케이스 17,18에서 계속 오류\n",
+    "def solution(array, n):\n",
+    "    answer = 100\n",
+    "    for i in array:\n",
+    "        if abs(n-i) < abs(n-answer):\n",
+    "            answer = i\n",
+    "        elif abs(n-i) == abs(n-answer):\n",
+    "            if answer == 0:\n",
+    "                answer = i\n",
+    "            else:\n",
+    "                answer = min(i,answer)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
