--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -179,7 +179,52 @@
     "                answer = i\n",
     "            else:\n",
     "                answer = min(i,answer)\n",
+    "    return answer\n",
+    "\n",
+    "def solution(array, n):\n",
+    "    answer = 100\n",
+    "    for i in array:\n",
+    "        if abs(n-i) < abs(n-answer):\n",
+    "            answer = i\n",
+    "        elif abs(n-i) == abs(n-answer):\n",
+    "                answer = min(i,answer)\n",
     "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 369게임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(order):\n",
+    "    li = ['3','6','9']\n",
+    "    result = 0\n",
+    "    for i in str(order):\n",
+    "        if i in li:\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# count()를 사용하면 조금 더 편할 듯 (다른사람 풀이)\n",
+    "def solution(order):\n",
+    "    answer = 0\n",
+    "    order = str(order)\n",
+    "    return order.count('3') + order.count('6') + order.count('9')"
    ]
   },
   {
