--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -231,6 +231,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 암호해독"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(cipher, code):\n",
+    "    answer = ''\n",
+    "    for i in range(code-1,len(cipher),code):\n",
+    "        answer += cipher[i]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른사람 풀이\n",
+    "def solution(cipher, code):\n",
+    "    answer = cipher[code-1::code]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
