대문자와 소문자

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -263,6 +263,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 대문자와 소문자\n",
+    "\n",
+    "swapcase()를 사용하면 한줄로 가능하다..\n",
+    "```python\n",
+    "def solution(my_string):\n",
+    "    return my_string.swapcase()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string):\n",
+    "    answer = ''\n",
+    "    for i in my_string:\n",
+    "        if i.isupper():\n",
+    "            answer += i.lower()\n",
+    "        else:\n",
+    "            answer += i.upper()\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
